restrict-networks-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-default-deny
  namespace: default
spec:
  podSelector: {} ##represents all in this context
    policyTypes:
    - Ingress
    - Egress
